# haruto_omni_drive_controller

./: CMakeLists.txt  README.md  launch.bash  omni_drive_plugin.xml  package.xml
include/haruto_controller/: differential.hpp  four_wheel_differential.hpp  mecanum.hpp  two_wheel_differential.hpp
include/omni_drive_controller/: kinematics.hpp  omni_drive_controller.hpp  visibility_control.h
launch/: haruto_controller.launch  haruto_serial.launch  haruto_simulation.launch  haruto_test.launch  haruto_tuner.launch
scripts/: command.py  constants.py  converter.py  encoder_tuner.py  feedback.py  sensor_feedback.py  velocity_command.py  velocity_converter.py
src/: differential.cpp  four_wheel_differential.cpp  kinematics.cpp  mecanum.cpp  omni_drive_controller.cpp  omni_drive_controller.yaml  two_wheel_differential.cpp
